--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,12 @@
             <artifactId>slf4j-simple</artifactId>
             <version>2.0.0-alpha7</version>
         </dependency>
+        <dependency>
+            <groupId>net.serenity-bdd</groupId>
+            <artifactId>serenity-ensure</artifactId>
+            <version>${serenity.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
